// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`optional_property test_optional_property_not_templated 1`] = `
Object {
  "json": Object {
    "property": "Some text",
    "type": "entity_with_optional_property",
  },
  "templateContext": Object {},
}
`;

exports[`optional_property test_optional_property_not_templated 2`] = `
Array [
  Array [
    [Error: No such template],
  ],
]
`;

exports[`optional_property test_optional_property_with_link 1`] = `
Object {
  "json": Object {
    "link": "Some text",
    "property": "Some text",
    "type": "entity_with_optional_property",
  },
  "templateContext": Object {
    "link": "Some text",
  },
}
`;

exports[`optional_property test_optional_property_with_link_missing_data 1`] = `
Object {
  "json": Object {
    "type": "entity_with_optional_property",
  },
  "templateContext": Object {},
}
`;

exports[`optional_property test_optional_property_with_link_missing_data 2`] = `Array []`;

exports[`optional_property test_optional_property_with_override 1`] = `
Object {
  "json": Object {
    "property": "Some text",
    "type": "entity_with_optional_property",
  },
  "templateContext": Object {
    "property": "Some text",
  },
}
`;

exports[`optional_property test_optional_property_with_override 2`] = `Array []`;

exports[`optional_property test_optional_property_with_override_in_template 1`] = `
Object {
  "json": Object {
    "link_override": "Some text",
    "property": "Some text",
    "type": "t_0",
  },
  "templateContext": Object {
    "link_override": "Some text",
  },
}
`;

exports[`optional_property test_optional_property_without_link 1`] = `
Object {
  "json": Object {
    "property": "Some text",
    "type": "entity_with_optional_property",
  },
  "templateContext": Object {},
}
`;

exports[`optional_property test_optional_property_without_link_missing_data 1`] = `
Object {
  "json": Object {
    "type": "entity_with_optional_property",
  },
  "templateContext": Object {},
}
`;
